--- a/src/app/shared/ui/header/header.component.html
+++ b/src/app/shared/ui/header/header.component.html
@@ -1,15 +1,82 @@
-<nav class="fixed z-30 w-full bg-gray-50">
-  <div class="py-3 px-3 lg:px-5 lg:pl-3">
+<nav class="fixed z-50 py-2 w-full bg-gray-50">
+  <div class="py-3 px-4 lg:px-6">
     <div class="flex justify-between items-center">
       <div class="flex justify-start items-center">
-        <button
-          id="toggleSidebarMobile"
-          aria-expanded="true"
-          aria-controls="sidebar"
-          class="p-2 mr-2 text-gray-600 rounded cursor-pointer lg:hidden hover:text-gray-900 hover:bg-gray-100 focus:bg-gray-100 focus:ring-2 focus:ring-gray-100"
+        <a href="#" class="text-md font-semibold flex items-center lg:mr-1.5">
+          <img src="/images/logo.svg" class="mr-2 h-6" alt="Winster Logo" />
+          <span class="self-center text-xl font-bold whitespace-nowrap"
+            >Soft <span class="hidden sm:inline">Dashboard</span></span
+          >
+        </a>
+        <div class="hidden sm:flex sm:ml-6">
+          <ul class="flex space-x-8">
+            <li>
+              <a
+                href="#"
+                class="text-sm font-medium text-gray-700 hover:text-fuchsia-500"
+                aria-current="page"
+                >Home</a
+              >
+            </li>
+            <li>
+              <a
+                href="#"
+                class="text-sm font-medium text-gray-700 hover:text-fuchsia-500"
+                aria-current="page"
+                >Team</a
+              >
+            </li>
+            <li>
+              <a
+                href="#"
+                class="text-sm font-medium text-gray-700 hover:text-fuchsia-500"
+                aria-current="page"
+                >Pricing</a
+              >
+            </li>
+            <li>
+              <a
+                href="#"
+                class="text-sm font-medium text-gray-700 hover:text-fuchsia-500"
+                aria-current="page"
+                >Contact</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div>
+        <a
+          href="#"
+          class="text-white bg-gradient-to-br from-pink-500 to-voilet-500 hover:scale-[1.02] shadow-md shadow-gray-300 transition-transform font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center mr-3"
         >
           <svg
-            id="toggleSidebarMobileHamburger"
+            class="mr-2 -ml-1 w-5 h-5"
+            fill="none"
+            stroke="currentColor"
+            viewBox="0 0 24 24"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M11 16l-4-4m0 0l4-4m-4 4h14m-5 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h7a3 3 0 013 3v1"
+            ></path>
+          </svg>
+          Login/Register
+        </a>
+        <button
+          data-collapse-toggle="mobile-menu"
+          type="button"
+          class="inline-flex justify-center items-center ml-3 text-gray-400 rounded-2xl sm:hidden hover:text-gray-900 focus:outline-none focus:ring-2 focus:ring-fuchsia-200"
+          aria-controls="mobile-menu-2"
+          aria-expanded="false"
+        >
+          <span class="sr-only">Open main menu</span>
+          <!-- Open mobile menu icon -->
+          <svg
             class="w-6 h-6"
             fill="currentColor"
             viewBox="0 0 20 20"
@@ -17,12 +84,12 @@
           >
             <path
               fill-rule="evenodd"
-              d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h6a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
+              d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
               clip-rule="evenodd"
             ></path>
           </svg>
+          <!-- Close mobile menu icon -->
           <svg
-            id="toggleSidebarMobileClose"
             class="hidden w-6 h-6"
             fill="currentColor"
             viewBox="0 0 20 20"
@@ -35,95 +102,62 @@
             ></path>
           </svg>
         </button>
-        <a
-          href="{{ '/'' | relURL }}"
-          class="text-md font-semibold flex items-center lg:mr-1.5"
-        >
-          <img src="images/logo.svg" class="mr-2 h-8" alt="Creative Tim Logo" />
-          <span
-            class="hidden md:inline-block self-center text-xl font-bold whitespace-nowrap"
-            >Soft UI Flowbite</span
-          >
-        </a>
-        <form action="#" method="GET" class="hidden lg:block lg:pl-8">
-          <label for="topbar-search" class="sr-only">Search</label>
-          <div class="relative mt-1 lg:w-80">
-            <div
-              class="flex absolute inset-y-0 left-0 items-center pl-3 pointer-events-none"
-            >
-              <svg
-                class="w-5 h-5 text-gray-500"
-                fill="currentColor"
-                viewBox="0 0 20 20"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  fill-rule="evenodd"
-                  d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z"
-                  clip-rule="evenodd"
-                ></path>
-              </svg>
-            </div>
-            <input
-              type="text"
-              name="email"
-              id="topbar-search"
-              class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-2 focus:ring-fuchsia-50 focus:border-fuchsia-300 block w-full pl-10 p-2.5"
-              placeholder="Search"
-            />
-          </div>
-        </form>
-      </div>
-      <div class="flex items-center">
-        <!-- Search mobile -->
-        <button
-          id="toggleSidebarMobileSearch"
-          type="button"
-          class="p-2 text-gray-500 rounded-2xl lg:hidden hover:text-gray-900 hover:bg-gray-100"
-        >
-          <span class="sr-only">Search</span>
-          <!-- Search icon -->
-          <svg
-            class="w-6 h-6"
-            fill="currentColor"
-            viewBox="0 0 20 20"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              fill-rule="evenodd"
-              d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z"
-              clip-rule="evenodd"
-            ></path>
-          </svg>
-        </button>
-        <a
-          class="github-button"
-          href="https://github.com/creativetimofficial/soft-ui-flowbite"
-          data-color-scheme="no-preference: dark; light: light; dark: light;"
-          data-icon="octicon-star"
-          data-size="large"
-          data-show-count="true"
-          aria-label="Star creativetimofficial/soft-ui-flowbite on GitHub"
-          >Star</a
-        >
-        <a
-          href="https://www.creative-tim.com/product/soft-ui-dashboard-pro-flowbite"
-          target="_blank"
-          class="sm:inline-flex ml-5 text-white bg-gradient-to-br from-pink-500 to-voilet-500 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center mr-3 shadow-md shadow-gray-300 hover:scale-[1.02] transition-transform"
-        >
-          <svg
-            class="mr-2 -ml-1 w-5 h-5"
-            fill="currentColor"
-            viewBox="0 0 20 20"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              d="M3 1a1 1 0 000 2h1.22l.305 1.222a.997.997 0 00.01.042l1.358 5.43-.893.892C3.74 11.846 4.632 14 6.414 14H15a1 1 0 000-2H6.414l1-1H14a1 1 0 00.894-.553l3-6A1 1 0 0017 3H6.28l-.31-1.243A1 1 0 005 1H3zM16 16.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zM6.5 18a1.5 1.5 0 100-3 1.5 1.5 0 000 3z"
-            ></path>
-          </svg>
-          Upgrade to Pro
-        </a>
       </div>
     </div>
+  </div>
+  <!-- Mobile menu -->
+  <div class="hidden sm:hidden" id="mobile-menu">
+    <ul class="pt-2">
+      <li>
+        <a
+          href="#"
+          class="block py-2 pr-4 pl-3 text-base font-normal text-gray-900 bg-gray-100"
+          >Dashboard</a
+        >
+      </li>
+      <li>
+        <a
+          href="#"
+          class="block py-2 px-3 text-base font-normal text-gray-600 border-b border-gray-100 hover:bg-gray-50 hover:border-gray-300 hover:text-gray-900"
+          >Team</a
+        >
+      </li>
+      <li>
+        <a
+          href="#"
+          class="block py-2 px-3 text-base font-normal text-gray-600 border-b border-gray-100 hover:bg-gray-50 hover:border-gray-300 hover:text-gray-900"
+          >Projects</a
+        >
+      </li>
+      <li>
+        <a
+          href="#"
+          class="block py-2 px-3 text-base font-normal text-gray-600 border-b border-gray-100 hover:bg-gray-50 hover:border-gray-300 hover:text-gray-900"
+          >Calendar
+        </a>
+      </li>
+      <li class="block">
+        <a
+          href="#"
+          class="inline-flex items-center px-3 pt-2 text-base font-normal text-gray-600 hover:bg-gray-50 hover:border-gray-300 hover:text-gray-900"
+        >
+          <svg
+            class="mr-2 w-5 h-5"
+            fill="none"
+            stroke="currentColor"
+            viewBox="0 0 24 24"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M11 16l-4-4m0 0l4-4m-4 4h14m-5 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h7a3 3 0 013 3v1"
+            ></path>
+          </svg>
+          Login/Register
+        </a>
+      </li>
+    </ul>
   </div>
 </nav>
