--- a/src/app/shared/ui/header/header.component.html
+++ b/src/app/shared/ui/header/header.component.html
@@ -5,43 +5,21 @@
         <a href="#" class="text-md font-semibold flex items-center lg:mr-1.5">
           <img src="/images/logo.svg" class="mr-2 h-6" alt="Winster Logo" />
           <span class="self-center text-xl font-bold whitespace-nowrap"
-            >Soft <span class="hidden sm:inline">Dashboard</span></span
+            >CRM/BSS</span
           >
         </a>
         <div class="hidden sm:flex sm:ml-6">
           <ul class="flex space-x-8">
+            @for (option of mainMenu; track option) {
             <li>
               <a
-                href="#"
+                href="{{ option.route }}"
                 class="text-sm font-medium text-gray-700 hover:text-fuchsia-500"
                 aria-current="page"
-                >Home</a
+                >{{ option.text }}</a
               >
             </li>
-            <li>
-              <a
-                href="#"
-                class="text-sm font-medium text-gray-700 hover:text-fuchsia-500"
-                aria-current="page"
-                >Team</a
-              >
-            </li>
-            <li>
-              <a
-                href="#"
-                class="text-sm font-medium text-gray-700 hover:text-fuchsia-500"
-                aria-current="page"
-                >Pricing</a
-              >
-            </li>
-            <li>
-              <a
-                href="#"
-                class="text-sm font-medium text-gray-700 hover:text-fuchsia-500"
-                aria-current="page"
-                >Contact</a
-              >
-            </li>
+            }
           </ul>
         </div>
       </div>
@@ -108,6 +86,17 @@
   <!-- Mobile menu -->
   <div class="hidden sm:hidden" id="mobile-menu">
     <ul class="pt-2">
+      @for (option of mainMenu; track option) {
+      <li>
+        <a
+          href="{{ option.route }}"
+          class="block py-2 pr-4 pl-3 text-base font-normal text-gray-900 bg-gray-100"
+          >{{ option.text }}</a
+        >
+      </li>
+      }
+    </ul>
+    <!-- <ul class="pt-2">
       <li>
         <a
           href="#"
@@ -158,6 +147,6 @@
           Login/Register
         </a>
       </li>
-    </ul>
+    </ul> -->
   </div>
 </nav>
